# almanah

./: .bzrignore  .clang-format  .editorconfig  .envrc  .gitignore  .gitlab-ci.yml  ChangeLog  ChangeLog.pre-git  HACKING  INSTALL  MAINTAINERS  Makefile.am  NEWS  NEWS.md  README  README.md  almanah.doap  autogen.sh  configure.ac  intltool-extract.in  intltool-update.in  meson.build  meson_options.txt  shell.nix
build-aux/: gpg_check_version.py  post_install.py
data/: Makefile.am  almanah-app-menu.ui  almanah.appdata.xml.in  almanah.convert  almanah.css  almanah.desktop.in  almanah.gresource.xml  almanah.schemas.in  almanah.ui  calendar-button.css  calendar-window.css  diary.desktop.in  diary.ui  entry-2.0.rnc  meson.build  org.gnome.Almanah.desktop.in  org.gnome.Almanah.metainfo.xml.in  org.gnome.Almanah.service.in  org.gnome.almanah.gschema.xml  org.gnome.almanah.gschema.xml.in  org.gnome.almanah.gschema.xml.in.in
data/gtk/: menus.ui
data/icons/: Makefile.am  meson.build
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/256x256/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
npins/: export-shell-env.sh  nixpkgs.nix  sources.json
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  az.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  fr_FR.po  fur.po  gl.po  hi.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  lv.po  ms.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  (+6 more)
src/: Makefile.am  add-definition-dialog.c  add-definition-dialog.h  add-link-dialog.c  add-link-dialog.h  almanah-marshal.list  almanah.gresource.xml  application.c  application.h  date-entry-dialog.c  date-entry-dialog.h  definition-manager-window.c  definition-manager-window.h  definition.c  definition.h  entry.c  entry.h  enums.c.template  enums.h.template  event-factory.c  event-factory.h  event-manager.c  event-manager.h  event.c  event.h  export-operation.c  export-operation.h  gtktextbufferserialize.c  gtktextbufferserialize.h  import-dialog.c  import-dialog.h  import-export-dialog.c  import-export-dialog.h  import-operation.c  import-operation.h  interface.c  interface.h  link-factory.c  link-factory.h  link-manager.c  (+22 more)
src/css/: almanah.css
src/definitions/: contact.c  contact.h  file.c  file.h  note.c  note.h  uri.c  uri.h
src/event-factories/: calendar-client.c  calendar-client.h  calendar-debug.h  calendar-sources.c  calendar-sources.h  calendar.c  calendar.h  e-cell-renderer-color.c  e-cell-renderer-color.h  e-source-selector.c  e-source-selector.h  f-spot.c  f-spot.h
src/events/: calendar-appointment.c  calendar-appointment.h  calendar-task.c  calendar-task.h  f-spot-photo.c  f-spot-photo.h
src/gtk/: menus.ui
src/link-factories/: calendar.c  calendar.h
src/links/: calendar-appointment.c  calendar-appointment.h  calendar-task.c  calendar-task.h  email.c  file.c  file.h  note.c  note.h  picasa.c  uri.c  uri.h
src/ui/: almanah.ui  calendar-button.ui  date-entry-dialog.ui  import-export-dialog.ui  import-results-dialog.ui  main-window.ui  preferences-dialog.ui  search-dialog.ui  uri-entry-dialog.ui
src/vfs/: enpm-vfs.c
src/widgets/: calendar-button.c  calendar-button.h  calendar-window.c  calendar-window.h  calendar.c  calendar.h  eggwrapbox.c  eggwrapbox.h  entry-tags-area.c  entry-tags-area.h  font-style-menu-action.c  font-style-menu-action.h  hyperlink-tag.c  hyperlink-tag.h  tag-accessible.c  tag-accessible.h  tag-entry.c  tag-entry.h  tag.c  tag.h
tests/: Makefile.am  gtests_vfs.c  meson.build  vfs.c
